<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZNNY</string>
    <string name="action_settings">Se231321</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LenovoEnvClient</string>
    <string name="login_noip_alert">请先设置ip地址</string>
    <string name="login_success">登陆成功</string>
    <string name="login_no_registe">请先注册用户</string>
    <string name="login_register_fail">注册失败！</string>
    <string name="login_register_success">注册成功！</string>
	<string name="main_setting">设定值:</string>
	<string name="main_co2_set_ok">二氧化碳预警值设置成功</string>
	<string name="main_co2_set_fail">二氧化碳预警值设置失败</string>
	<string name="main_pm2.5_set_success">PM2.5预警值设置成功</string>
	<string name="main_pm2.5_set_fail">PM2.5预警值设置失败</string>
	<string name="main_normal">正常</string>
	<string name="main_warning">预警</string>
	<string name="welcome">欢迎进入智能农业管理系统</string>
	<string name="login_user">请输入用户名</string>
	<string name="login_pw">请输入密码</string>
	<string name="login">登录</string>
	<string name="setip">IP设置</string>
	<string name="creat">新用户注册</string>
</resources>
